[package]
name = "revelation-songbook"
version = "0.1.0"
edition = "2024"
authors = ["Revelation Team"]
description = "Songbook domain with ChordPro parser for Revelation project"
license = "MIT"
repository = "https://github.com/Revelation-Path/revelation-songbook"
readme = "README.md"
keywords = ["revelation", "songbook", "chordpro", "worship"]
categories = ["data-structures", "parser-implementations"]

[features]
default = []
db = ["dep:sqlx"]
backend = ["dep:masterror"]
api = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1"
sqlx = { version = "0.8", features = ["postgres"], optional = true }
masterror = { version = "0.26", optional = true }
utoipa = { version = "5", features = ["uuid", "chrono"], optional = true }
